# music_jam

./: .dockerignore  .env  .env.example  .env.sample  .gitignore  Cargo.toml  README.md  compose.yml  credentials.env.sample  dockerfile  music_jam.fig  rust-toolchain.toml  rustc-ice-2024-07-10T14_40_35-32056.txt
.cargo/: config.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  dockerfile
.github/workflows/: docker-image.yml  docker-publish.yml  rust.yml
.sqlx/: query-018fa095b21f17e273d6dd326ec6fc861ba861d62863e3f2b3b36626a9a988cf.json  query-019ebcad6bf7f810db6a5116707066904b9176aef3bd85b7a66a32be055bd3e4.json  query-089db86d6061ec562638f03ffea0dbd5d5260a7fcb1d65d48b4fdaa8d67927e5.json  query-1220d15a56dbf823eaa452fbafa17442ab0568bc81a31fa38e16e3df3278e5f9.json  query-12790125ffdc7ffed998e40155aa71526f1b25ca7aeb913ed82270ad4291d92b.json  query-1ee8c95b513492d88de3a96acd97a1e6e9f6ef182887a907ab1f4403ca6bc1c0.json  query-27f2a0a1ff0a345f21a980335c6e2f5836fe450ae816252b102e915bde38451c.json  query-2d512d6eaaec38e9453bd2901fa433aea0bceae5e7821cb3de72620c0effb673.json  query-3034f02452479de62702b2e3d8fde9c8a0d54cd7e1b7be1fcd7e4553d2e21479.json  query-30375053000456ced63f59a3c578c53a145c2d4b646d72311944ee0cc61f7c14.json  query-30f385e3f4675f9a13ce321e32921dd647ede7e1a6978f00b88fef4370034391.json  query-36dec2223b12479c87c12e97376891f40c5c8258e940de69e857b428a09f6095.json  query-4389a42fe4bfcbfe5424d8c6c9d1d3a3a927131a385e1dae4cf124acfc62d1bb.json  query-45792606b0455b311f9f36e15ff63e8723a6f5356527d39217de2e6663fd80ef.json  query-46ca5e3d341b972cec24b3dc6029ae9c81467d4d3d538ef89be4e5aa86389440.json  query-4f70654991eb55081ec08a65e6fa8167bbf82223da79b478908bf1220e0fe6fc.json  query-53ef69b9cb4675a42bc6f11e4562316796b6b4d8415a2722ef794ed1220335b3.json  query-5b27059f5a40340c2fc58928a4af5549ea23e9c9db06ceda2c2b4141cbfa42ac.json  query-5f7913d8ba203f229efcd0f92423da72a38b7464793a5b06275ca75287ff63cd.json  query-5ffae4861d56ebc544dd0d7462f4dee561969d58d9fe2bc139f8292da69cde6e.json  query-605bb990193c33c83f5766a2c528d09b643e603beb7e089163d8c3b738269a24.json  query-655ada31b77f0ea9b010ef289d727f9e4701649843749e85e49809bdfe0c633a.json  query-65cb09d6e498efb097b7d8bb64b2d608ca32f9d0e65d99412cbd4c1ad496d26a.json  query-67180a74be31408614a2587c31399d9955488a6e8d54a0e877a6af3aaa3078a5.json  query-67a863d27d7f70e7d4a82335bad9ab8dbc233fdf13ea85b8de490a2cdc17946c.json  query-67fde4df15f73837068efe040910fd54936b2cb595975ce482df16f0794d3163.json  query-6b99d36e22dfcb69c3247ef006065939fc06abfe99b8396418755a82b8cf8f55.json  query-6ced543204db6bb82b5bbc05a95e7b05fdcfd33d6d617f1dc29245f9121d4af5.json  query-74d171003303e951b05f8914df30c700088dfea206757588807691f7c1e597be.json  query-7ada4f25f4d0f13f23c55f4b9774d4d897bac26008266df1f8623229a905fd27.json  query-7b2ef7a4dcb2b6703c17f403ef383ca4e179a3a641ef2ad201a0cfc40f1d414f.json  query-833b87dfeee70068dd04ed563eeea29509febead6ee571b6d03fa583b34cb79c.json  query-88d6645645fac6b77650834c3d8fbf7193846ae253a55fa0082ce067099e0a44.json  query-8be5611d566b830e4426dba4b588f3a7aa87d861fe478f4f3d3e140ca88f693e.json  query-9971437b9f240fd49add468fd56aa9725287cc58e9e9e7e96fb447133fd53753.json  query-adf8fb13882fff820ab65522a0539f910c651383690c65397a91bdbb038254b4.json  query-aff7d9d2da1c745a641f9b67f023b0c7eec1d4adda0f00c547041c2c3e43d84f.json  query-b08fde0ce7ed6200536c8912ccca1d7830d738b830dc0617c8c158d30d6bb525.json  query-b1483291673ce8a0716266a092e82c0276580163392a888a4f2660f912489665.json  query-b5760fd4f35031d4863aee9999cd2baaf7c74707e7f3e599ba97c8167af9002d.json  (+13 more)
db/: compose.yml  schema.sql
db/docker-entrypoint-initdb.d/: init.sql
db/migrations/: 20240704061423_init.sql
src/: app.rs  general_types.rs  lib.rs  main.rs  startup.rs
src/app/: general_functions.rs  mod.rs  pages.rs  socket.rs
src/app/components/: general.rs  host_only.rs  mod.rs
src/app/components/general/: create.rs  join.rs  mod.rs  modal.rs  share.rs  song.rs  song_list.rs  users_bar.rs
src/app/components/host_only/: player.rs
src/app/components/user_only/: create_user.rs  mod.rs  search.rs  your_songs.rs
src/app/general/: functions.rs  types.rs
src/app/pages/: create_host.rs  create_user.rs  home.rs  host.rs  mod.rs  user.rs
src/app/socket/: mod.rs  read.rs  write.rs
src/components/: error_template.rs  mod.rs
src/components/general/: create.rs  join.rs  mod.rs  modal.rs  player.rs  share.rs  song.rs  song_list.rs  users_bar.rs
src/components/host/: player.rs
src/components/user/: create_user.rs  mod.rs  player.rs  search.rs  your_songs.rs
src/general/: mod.rs  types.rs
src/general/functions/: jam.rs  mod.rs  real_time.rs  song.rs  spotify.rs  user.rs  vote.rs
src/general/types/: app_state.rs  error.rs  id.rs  jam.rs  mod.rs  song.rs  spotify_credentials.rs
src/general/types/real_time/: changed.rs  channel_update.rs  mod.rs  request.rs  update.rs
src/model/: mod.rs  ws_client_wrapper.rs
src/model/functions/: jam.rs  mod.rs  real_time.rs  song.rs  spotify.rs  user.rs  vote.rs
src/model/types/: app_state.rs  db.rs  error.rs  id.rs  jam.rs  mod.rs  song.rs  spotify_credentials.rs  user.rs  vote.rs
src/model/types/real_time/: changed.rs  channel_update.rs  mod.rs  request.rs  search.rs  update.rs
src/pages/: create_host_page.rs  create_user_page.rs  home_page.rs  host_page.rs  mod.rs  user_page.rs
src/router/: fileserv.rs  mod.rs
src/socket/: mod.rs  read.rs  write.rs
style/: _create_host_page.scss  _create_pages.scss  _defaults.scss  _home_page.scss  main.scss  music_jam.fig
style/components/: _button.scss  _components.scss  _create_island.scss  _create_user.scss  _islands.scss  _join_island.scss  _modal.scss  _player.scss  _scroll.scss  _search.scss  _share.scss  _song.scss  _song_list.scss  _text_input.scss  _user_bar.scss
style/pages/: _create_host_page.scss  _create_user_page.scss  _general_intercat_page.scss  _home_page.scss  _host_page.scss  _pages.scss  _user_page.scss
